--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,6 @@
         ]
     },
     "require-dev": {
-        "prestashop/php-dev-tools": "^3.3"
+        "prestashop/php-dev-tools": "~3.0"
     }
 }
