--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,42 +1,81 @@
 name: PHP tests
 on: [push, pull_request]
 jobs:
+  # Check there is no syntax errors in the project
   php-linter:
-    name: PHP Syntax check 5.6|7.2|7.3
+    name: PHP Syntax check 5.6|7.2|7.3|7.4|8.0|8.1
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2.0.0
+
       - name: PHP syntax checker 5.6
         uses: prestashop/github-action-php-lint/5.6@master
+
       - name: PHP syntax checker 7.2
         uses: prestashop/github-action-php-lint/7.2@master
+
       - name: PHP syntax checker 7.3
         uses: prestashop/github-action-php-lint/7.3@master
+
+      - name: PHP syntax checker 7.4
+        uses: prestashop/github-action-php-lint/7.4@master
+
+      - name: PHP syntax checker 8.0
+        uses: prestashop/github-action-php-lint/8.0@master
+
+      - name: PHP syntax checker 8.1
+        uses: prestashop/github-action-php-lint/8.1@master
+
+  # Check the PHP code follow the coding standards
   php-cs-fixer:
     name: PHP-CS-Fixer
     runs-on: ubuntu-latest
     steps:
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.4'
+
       - name: Checkout
         uses: actions/checkout@v2.0.0
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: vendor
+          key: php-${{ hashFiles('composer.lock') }}
+
+      - name: Install dependencies
+        run: composer install
+
       - name: Run PHP-CS-Fixer
-        uses: prestashopcorp/github-action-php-cs-fixer@master
+        run: ./vendor/bin/php-cs-fixer fix --dry-run --diff --using-cache=no --diff-format udiff
+
+  # Run PHPStan against the module and a PrestaShop release
   phpstan:
     name: PHPStan
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        presta-versions: ['1.7.0.3', 'latest']
+        presta-versions: ['1.7.6', '1.7.7', '1.7.8', 'latest']
     steps:
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.4'
+
       - name: Checkout
         uses: actions/checkout@v2.0.0
 
+      # Add vendor folder in cache to make next builds faster
       - name: Cache vendor folder
         uses: actions/cache@v1
         with:
           path: vendor
           key: php-${{ hashFiles('composer.lock') }}
 
+      # Add composer local folder in cache to make next builds faster
       - name: Cache composer folder
         uses: actions/cache@v1
         with:
@@ -45,8 +84,6 @@ jobs:
 
       - run: composer install
 
-      - name: Pull PrestaShop files (Tag ${{ matrix.presta-versions }})
-        run: docker run -tid --rm -v ps-volume:/var/www/html --name temp-ps prestashop/prestashop:${{ matrix.presta-versions }}
-
-      - name : Run PHPStan
-        run: docker run --rm --volumes-from temp-ps -v $PWD:/web/module -e _PS_ROOT_DIR_=/var/www/html --workdir=/web/module phpstan/phpstan:0.12 analyse --configuration=/web/module/tests/phpstan/phpstan.neon
+      # Docker images prestashop/prestashop may be used, even if the shop remains uninstalled
+      - name: Execute PHPStan on PrestaShop (Tag ${{ matrix.presta-versions }})
+        run: ./tests/phpstan.sh ${{ matrix.presta-versions }}
