--- a/tests/phpstan/phpstan-1.7.6.neon
+++ b/tests/phpstan/phpstan-1.7.6.neon
@@ -10,3 +10,6 @@ parameters:
     - '#Property OrderStateCore\:\:\$name \(string\) does not accept array<int, mixed>.#'
     - '#Parameter \#1 \$hook_name of method ModuleCore\:\:registerHook\(\) expects string, array<int, string> given.#'
     - '#Parameter \#1 \$id of class Currency constructor expects null, int given.#'
+    - '#Property TabCore\:\:\$name \(string\) does not accept array<string>.#'
+    - '#Parameter \#2 \$currency of static method ToolsCore\:\:displayPrice\(\) expects array\|object\|null, int given.#'
+    - '#Property ModuleCore\:\:\$version \(float\) does not accept string.#'
