--- a/tests/phpstan/phpstan-1.7.7.neon
+++ b/tests/phpstan/phpstan-1.7.7.neon
@@ -8,3 +8,4 @@ parameters:
     - '#Property OrderStateCore\:\:\$name \(string\) does not accept array<int, mixed>.#'
     - '#Property TabCore\:\:\$name \(string\) does not accept array<string>.#'
     - '#Parameter \#2 \$currency of static method ToolsCore\:\:displayPrice\(\) expects array\|object\|null, int given.#'
+    - '#Parameter \#2 \$id_lang of static method ToolsCore\:\:displayDate\(\) expects int\|null, true given.#'
