--- a/tests/phpstan/phpstan-1.7.8.neon
+++ b/tests/phpstan/phpstan-1.7.8.neon
@@ -4,3 +4,4 @@ includes:
 parameters:
   ignoreErrors:
     - '#Property OrderStateCore\:\:\$template \(array<string>\) does not accept string.#'
+    - '#Parameter \#2 \$id_lang of static method ToolsCore\:\:displayDate\(\) expects int\|null, true given.#'
