--- a/tests/phpstan/phpstan-latest.neon
+++ b/tests/phpstan/phpstan-latest.neon
@@ -4,3 +4,5 @@ includes:
 parameters:
   ignoreErrors:
     - '#Property OrderStateCore\:\:\$template \(array<string>\) does not accept string.#'
+    - '#Parameter \#2 \$full of static method ToolsCore\:\:displayDate\(\) expects bool, int given.#'
+    - '#Static method ToolsCore\:\:displayDate\(\) invoked with 3 parameters, 1-2 required.#'
